# cross_platform_IPC_wrappers

./: CMakeLists.txt  README.md
src/: Main.cpp  Main.out  SharedMemory.cpp  SharedMemory.h
